Aplly GJF Version 1.24.0